# leyu-project

leyu/: .gitignore  CMakeLists.txt  Serial Debug 2026-06-04 142715.txt  Serial Debug 2026-06-08 095815.txt  Serial Debug 2026-06-08 101241.txt  Serial Debug 2026-06-08 112048.txt  brtc_log_summary.txt  fix_parser.py  merge_firmware.bat  merge_firmware.py  partitions_rtc_esp32_sdk.csv  sdkconfig.defaults  sdkconfig副本
leyu/components/app_wifi/: CMakeLists.txt  app_wifi.c
leyu/components/app_wifi/router_web/: modem_http_config.c
leyu/components/av_processor/: CHANGELOG.md  audio_processor.c  idf_component.yml
leyu/components/av_processor/include/: audio_processor.h  av_processor_type.h  video_processor.h
leyu/components/av_processor/script/: media_dump_server.py
leyu/components/bt/: CMakeLists.txt
leyu/components/common_lib/: CMakeLists.txt
leyu/components/esp_board_manager_adapter/: Kconfig  esp_board_manager_adapter.c  idf_component.yml
leyu/components/gen_bmgr_codes/: CMakeLists.txt  gen_board_device_config.c  gen_board_device_handles.c  gen_board_info.c  gen_board_periph_config.c  gen_board_periph_handles.c
leyu/components/http_ota/: CMakeLists.txt
leyu/components/iot_eth/: CHANGELOG.md  idf_component.yml  iot_eth_netif_glue.c
leyu/components/iot_usbh_cdc/: CHANGELOG.md  Kconfig  idf_component.yml  iot_usbh_cdc.c  iot_usbh_descriptor.c  usbh_helper.c
leyu/components/iot_usbh_rndis/: idf_component.yml  iot_usbh_rndis.c
leyu/components/modem_at/: idf_component.yml
leyu/components/ota_component/: CMakeLists.txt
leyu/components/ota_component/include/: ota.h
leyu/components/uart_comm/: CMakeLists.txt  system_monitor.c  system_monitor.h  uart_comm.c  uart_comm.h
leyu/main/: CMakeLists.txt  Kconfig.projbuild  basic_board.c  battery_module.c  battery_module.h  blufi_example.h  blufi_example_main.c  blufi_security.c  brtc_app.c  brtc_app.h  button_handler.c  button_handler.h  call_manager.c  call_manager.h  contact_manager.c  contact_manager.h  idf_component.yml  main.c  mqtt5_client.c  mqtt5_client.h  mqtt_example.c  mqtt_example.h  mqtt_msg_builder.c  mqtt_msg_builder.h  mqtt_msg_parser.c  mqtt_msg_parser.h  network_manager.c  network_manager.h  phone_numbers.h  ringtone_player.c  ringtone_player.h  uart_echo_example_main.c  uart_echo_example_main.h  usb_rndis_4g_module.c  usb_rndis_4g_module.h  usb_rndis_4g_module乐语旧版备份.rar
leyu/main/console/: console.c  console.h
leyu/main/rgb_led/: led_control.c  led_control.h  xgb-1815.c  xgb-1815.h
leyu/main/sip/: av_system_app.c  av_system_app.h  sip_service.c  sip_service.h
(+30 files in other folders)
